k8s/registration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registration-service
  template:
    metadata:
      labels:
        app: registration-service
    spec:
      containers:
      - name: registration-service
        image: registration-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: registration-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: registration-service
